--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,2 +1,55 @@
 @charset "UTF-8";
 
+*{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body, html{
+    background-color: #5f2c82;
+    height: 100vh;
+    width: 100vw;
+}
+main{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+section#login{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.449);
+}
+section#login > div#imagem {
+    display: block;
+    background: #5f2c82 url(../imagens/building.jpg) no-repeat;
+    background-position: left center;
+    background-size: cover;
+    height: 200px;
+}
+section#login > div#formulario {
+    display: block;
+    padding: 10px;
+}
+p img{
+    width: 15px;
+}
+#campo1, #campo2{
+    padding: 2px;
+    border-radius: 10px;
+    border-style: inset;
+    border-color: #5f2c82;
+}
+input#iemail{
+    background-color: lightskyblue;
+    border-radius: 5px;
+}
