--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -15,6 +15,7 @@ Grandes telas: acima de 1200px
     }
     section#login{
         width: 80vw;
+        height: 280px;
     }
     section#login > div#imagem {
         float: left;
@@ -34,6 +35,7 @@ Grandes telas: acima de 1200px
     }
     section#login{
         width: 950px;
+        height: 350px;
     }
    section#login > div#imagem{
         float: right;
@@ -51,6 +53,7 @@ Grandes telas: acima de 1200px
 
     div#formulario > p {
         font-size: 1.2em;
+        margin: 10px 0px;
     }
 }
 
