--- a/estilos/style.css
+++ b/estilos/style.css
@@ -28,7 +28,6 @@ section#login{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     background-color: white;
     width: 250px;
     height: 515px;
@@ -37,6 +36,7 @@ section#login{
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.456);
     transition: width .3s, height .5s;
     transition-timing-function: ease;
+    transform: translate(-50%, -50%);
 }
 
 div#imagem {
@@ -68,12 +68,35 @@ label{
 
 div.campo{
     background-color: #5f2c82;
+    border:2px solid #5f2c82;
     width: 100%;
     display: block;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 5px 0px;
 
+}
+
+div.campo > span{
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input{
+    background-color: #68dfdb;
+    font-size: 1em;
+    width: calc(100% - 44.4px);
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-12px);
+}
+
+div.campo >input:focus-within{
+    background-color: white;
 }
 
 form > input[type=submit] {
